말 잡기 구현